Update index.html with mobile improvements
- Include any mobile-specific enhancements
- Ensure consistency with CSS scroll snap changes

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@ document.addEventListener('click', function (e) {
       <p style="color:white;">.</p>
     </div>
 
-    <div id="indice" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div id="indice" class="column">
       <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
       <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
@@ -316,7 +316,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     </div>
     
     <!-- 
-  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+  <div class="column">
       <span class="anchor" id="casaJBRC"></span>
       <h3>Edificio</h3>
       <p>Texto</p>
@@ -342,7 +342,7 @@ Maecenas nec lobortis nunc.
       <img loading="lazy" src="assets/img/45_edificio/01.jpg" alt="Image 1">
     
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Imágenes</p>
@@ -634,7 +634,7 @@ Ritmo: Catalina Sfer Salas</p>
       <p style="color:white;">.</p>
     </div>
 
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column">
       <span class="anchor" id="casaERCP"></span>
       <h3>Casa F.V.</h3>-->
       <!--<p>Texto</p>-->
