Restrict image zoom functionality to desktop only
- Wrap image zoom CSS in @media (min-width: 769px) query
- Add window.innerWidth > 768 check in JavaScript zoom handler
- Image zoom now only works on desktop, not mobile
- Mobile users get clean image viewing without zoom interference
- Maintains scroll snap functionality for mobile navigation

--- a/public/index.html
+++ b/public/index.html
@@ -103,10 +103,11 @@ document.addEventListener('DOMContentLoaded', function() {
   var images = document.querySelectorAll('.column img');
 });
 
-// Toggle zoom on images inside columns
+// Toggle zoom on images inside columns - Desktop only
 document.addEventListener('click', function (e) {
   var target = e.target;
-  if (target && target.tagName === 'IMG') {
+  // Only enable zoom on desktop (screen width > 768px)
+  if (target && target.tagName === 'IMG' && window.innerWidth > 768) {
     var parent = target.closest('.column');
     if (parent) {
       e.stopPropagation();
