Implementar sistema de filtros por categorías
- Agregar 5 categorías de filtros: Teoría, Residenciales, Instalaciones, Públicos, Investigación
- Implementar filtrado por proyectos completos (no columnas individuales)
- Agregar funcionalidad de toggle para activar/desactivar filtros
- Posicionar filtros entre información de contacto e índice
- Ocultar gaps con display: none para evitar espacios problemáticos
- Crear archivo filters.js con comentarios detallados
- Mantener alineación original al filtrar

--- a/public/index.html
+++ b/public/index.html
@@ -2914,4 +2914,7 @@ function stopScrolling() {
 
 </script>
 
+<!-- Sistema de Filtros -->
+<script src="assets/js/filters.js"></script>
+
 </html>
