Fix image zoom functionality with improved scroll behavior
- Fixed zoom toggle functionality for multiple images
- Implemented pointer-events: none for zoomed images to allow scrolling
- Simplified click detection system for better UX
- Added automatic cleanup of zoomed classes when switching images
- Improved scroll behavior in columns when image is zoomed
- Added Escape key support for closing zoomed images
- Removed console.log statements for cleaner code

--- a/public/index.html
+++ b/public/index.html
@@ -103,26 +103,7 @@ document.addEventListener('DOMContentLoaded', function() {
   var images = document.querySelectorAll('.column img');
 });
 
-// Toggle zoom on images inside columns - Desktop only
-document.addEventListener('click', function (e) {
-  var target = e.target;
-  // Only enable zoom on desktop (screen width > 768px)
-  if (target && target.tagName === 'IMG' && window.innerWidth > 768) {
-    var parent = target.closest('.column');
-    if (parent) {
-      e.stopPropagation();
-      target.classList.toggle('zoomed');
-      
-      // Check if any images in this column are zoomed
-      var hasZoomed = parent.querySelector('img.zoomed');
-      if (hasZoomed) {
-        parent.classList.add('has-zoomed');
-      } else {
-        parent.classList.remove('has-zoomed');
-      }
-    }
-  }
-});
+// Zoom functionality moved to zoom-images.js
 
 </script>
   
@@ -2916,5 +2897,8 @@ function stopScrolling() {
 
 <!-- Sistema de Filtros -->
 <script src="assets/js/filters.js"></script>
+
+<!-- Sistema de Zoom de Imágenes -->
+<script src="assets/js/zoom-images.js"></script>
 
 </html>
