Ajustar offset de bordes solo para última imagen del borde
- Agregar clase 'last-edge-image' a la última imagen en columna 'web'
- Modificar zoom-images.js para aplicar ajuste de bordes solo a imágenes con clase 'last-edge-image'
- Prevenir que imágenes zoomed sean arrastradas por bordes durante scroll horizontal
- Aplicar cambios en ambos archivos ES y EN

--- a/public/index.html
+++ b/public/index.html
@@ -2759,7 +2759,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
       <!--<p>Tapiz</p>-->
       <!--<br>-->
       <!--<hr>-->
-      <img loading="lazy" src="assets/img/37_website multicolumna/01.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/37_website multicolumna/01.jpg" alt="Image 1" class="last-edge-image">
           <br>
           <br>
       <p>Proyecto, curaduría y ejecución web: Manuel Mensa, Catalina Sfer Salas, Nicolás Boscoboinik </p>
