--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -2797,7 +2797,7 @@ allotropic variations.
       <!--<p>Tapestry</p>-->
       <!--<br>-->
       <!--<hr>-->
-      <img loading="lazy" src="assets/img/37_website multicolumna/01.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/37_website multicolumna/01.jpg" alt="Image 1" class="last-edge-image">
           <br>
           <br>
       <p>Project, curation y execution: Manuel Mensa, Catalina Sfer Salas, Nicolás Boscoboinik </p>
