add mailto to email cta

--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -131,7 +131,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <div id="indice" class="column">
       <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
-      <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
       <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
       <p style="margin-bottom: 110px"><a href="/">ES  </a><a style="font-weight: bold !important;" href="/index_EN.html">  EN</a></p>
