Change header from sticky to fixed and add desktop-only spacing for index column

--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -114,7 +114,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <body>
   
 <div class="button-container-l">
-  <a href="#indice"><button id="slideBackTop" type="button" class="arrow-button-l" ></button> <!--&#x226A;&#xFE0E; onclick="window.location.href = '#indice';"--></a>
+  <!-- <a href="#indice"><button id="slideBackTop" type="button" class="arrow-button-l" ></button> -->
 </div>
 <!--<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>-->
   <button id="slideBackBottom" type="button" class="arrow-button-l"
@@ -130,11 +130,35 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 
     <div id="indice" class="column">
-      <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
-      <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
-      <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
-      <p style="margin-bottom: 110px"><a href="/">ES  </a><a style="font-weight: bold !important;" href="/index_EN.html">  EN</a></p>
+      <div class="header">
+        <div>
+          <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
+          <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+          <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
+          <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
+        </div>
+        <div>
+          <p style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </a><a href="/index_EN.html">  EN</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="desktop-only">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+      </div>
       <!--<br>-->
       <h3>Index</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
@@ -2809,7 +2833,7 @@ allotropic variations.
   </div>
   
   <div class="button-container-r">
-  <a href="#web"><button id="slideForwardTop" type="button" class="arrow-button-r"></button></a> <!--&#x226B;&#xFE0E; onclick="window.location.href = '#web';"-->
+  <!-- <a href="#web"><button id="slideForwardTop" type="button" class="arrow-button-r"></button></a> -->
 </div>
  <!-- <button id="slideForwardBottom" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>-->
 <button id="slideForwardBottom" type="button" class="arrow-button-r" 
