--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <body>
   
 <div class="button-container-l">
-  <a href="#indice"><button id="slideBackTop" type="button" class="arrow-button-l" ></button> <!--&#x226A;&#xFE0E; onclick="window.location.href = '#indice';"--></a>
+  <!-- <a href="#indice"><button id="slideBackTop" type="button" class="arrow-button-l" ></button> -->
 </div>
 <!--<button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>-->
   <button id="slideBackBottom" type="button" class="arrow-button-l"
@@ -130,12 +130,33 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 
     <div id="indice" class="column">
-      <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
-      <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
-      <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
-      <p style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </a><a href="/index_EN.html">  EN</a></p>
-      <!--<br>-->
+      <div class="header">
+        <div>
+            <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
+              <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+                <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
+                <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
+          </div>
+          <div>
+            <p style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </a><a href="/index_EN.html">  EN</a>
+            </p>
+          </div>
+      </div>
+      
+      <div class="desktop-only">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+      </div>
       <h3>Índice</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <p style="margin-bottom: -10px"><a href="#casaERCP">Telones</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
@@ -2771,7 +2792,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
   </div>
   
   <div class="button-container-r">
-  <a href="#web"><button id="slideForwardTop" type="button" class="arrow-button-r"></button></a> <!--&#x226B;&#xFE0E; onclick="window.location.href = '#web';"-->
+  <!-- <a href="#web"><button id="slideForwardTop" type="button" class="arrow-button-r"></button></a> -->
 </div>
  <!-- <button id="slideForwardBottom" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>-->
 <button id="slideForwardBottom" type="button" class="arrow-button-r" 
