Make 'Manuel Mensa' header text a clickable link to home page

--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -132,7 +132,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <div id="indice" class="column">
       <div class="header">
         <div>
-          <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
+          <h3 style="margin-bottom: -10px"><a href="/index_EN.html" style="color: black; text-decoration: none;">Manuel Mensa</a></h3>
           <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
           <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
           <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
