--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Manuel Mensa es arquitecto por la UBA, dirige Manuel Mensa Arquitectos y es Profesor Titular de Proyecto en la UTDT, donde también coordinó áreas académicas y tutorías. Desarrolla clínicas de proyecto para artistas, fue director del Centro de Estudios de Arquitectura Contemporánea y edita Creciendo en Público, un newsletter de frecuencia errática.">
   
 <title>Manuel Mensa</title>
 <link rel="icon" type="image/x-icon" href="assets/img/00_logo/manuelmensa-logo.jpeg">
