--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -4,6 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Manuel Mensa is a UBA-trained architect, director of Manuel Mensa Arquitectos and Full Professor at UTDT, where he has coordinated academic areas and thesis studios. He mentors artists through project clinics, formerly headed the Center for Contemporary Architecture Studies and publishes the erratic newsletter Growing in Public.">
   
 <title>Manuel Mensa</title>
 <link rel="icon" type="image/x-icon" href="assets/img/00_logo/manuelmensa-logo.jpeg">
