--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -150,8 +150,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
         </div>
         <div>
-          <p style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </a><a href="/index_EN.html">  EN</a>
-          </p>
+          <span style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </span><span><a href="/index_EN.html">  EN</a></span>
         </div>
       </div>
 
