--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,8 @@ document.addEventListener('DOMContentLoaded', function() {
                 <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
           </div>
           <div>
-            <span style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </span><span><a href="/index_EN.html">  EN</a></span>
+            <span style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </span><a href="/index_EN.html">  EN</a>
+            </p>
           </div>
       </div>
       
@@ -168,6 +169,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <br/>
         <br/>
       </div>
+      <br>
       <h3>Índice</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <p style="margin-bottom: -10px"><a href="#casaERCP">Telones</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
