--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,18 @@ document.addEventListener('DOMContentLoaded', function() {
         onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" 
         onmouseleave="stopScrollLeft()" ontouchstart="scrollToPreviousId(event)">
 </button>
+  <div class="header">
+    <div>
+        <h3 style="margin-bottom: -10px"><a href="#" onclick="scrollToStart(event)" style="color: black; text-decoration: none;">Manuel Mensa</a></h3>
+          <p style="margin-bottom: -10px"><a style="left: 0px !important; text-decoration: none; color: black;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+            <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
+            <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
+      </div>
+      <div>
+        <span style="margin-bottom: 110px"><a style="font-weight: bold !important; text-decoration: none; color: black;" href="/">ES  </span><a style="text-decoration: none; color: black;" href="/index_EN.html">  EN</a>
+        </p>
+      </div>
+  </div>
   <div class="container">
 
     <div class="gap" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -142,33 +154,22 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 
     <div id="indice" class="column">
-      <div class="header">
-        <div>
-            <h3 style="margin-bottom: -10px"><a href="#" onclick="scrollToStart(event)" style="color: black; text-decoration: none;">Manuel Mensa</a></h3>
-              <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-                <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
-                <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
-          </div>
-          <div>
-            <span style="margin-bottom: 110px"><a style="font-weight: bold !important;" href="/">ES  </span><a href="/index_EN.html">  EN</a>
-            </p>
-          </div>
-      </div>
       
-      <div class="desktop-only">
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+      <div>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
         <br/>
       </div>
+
       <br>
       <h3>Índice</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
