--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -145,16 +145,16 @@ document.addEventListener('DOMContentLoaded', function() {
       <div class="header">
         <div>
           <h3 style="margin-bottom: -10px"><a href="#" onclick="scrollToStart(event)" style="color: black; text-decoration: none;">Manuel Mensa</a></h3>
-          <p style="margin-bottom: -10px"><a style="left: 0px !important;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+          <p style="margin-bottom: -10px"><a style="left: 0px !important; text-decoration: none; color: black;" target="_blank" href="mailto:contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
           <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
           <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
         </div>
         <div>
-          <span style="margin-bottom: 110px"><a href="/">ES  </span><span><a style="font-weight: bold !important;" href="/index_EN.html">  EN</a></span>
+          <span style="margin-bottom: 110px"><a style="text-decoration: none; color: black;" href="/">ES  </span><span><a style="font-weight: bold !important; text-decoration: none; color: black;" href="/index_EN.html">  EN</a></span>
         </div>
       </div>
 
-      <div class="desktop-only">
+      <!-- <div class="desktop-only"> -->
         <br/>
         <br/>
         <br/>
@@ -169,7 +169,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <br/>
         <br/>
         <br/>
-      </div>
+      <!-- </div> -->
       <br>
       <h3>Index</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
